feat: add tag fat jar workflow